# mmtk-openjdk

./: .gitignore
mmtk/: Cargo.toml
mmtk/.cargo/: config.toml
mmtk/src/: abi.rs  api.rs  build_info.rs  collection.rs  edges.rs  gc_work.rs  lib.rs  object_model.rs  object_scanning.rs  reference_glue.rs  scanning.rs  slots.rs
mmtk/src/vm_metadata/: constants.rs
openjdk/: CompileThirdPartyHeap.gmk  mmtk.h  mmtkBarrierSet.cpp  mmtkBarrierSet.hpp  mmtkBarrierSetAssembler_x86.cpp  mmtkBarrierSetAssembler_x86.hpp  mmtkBarrierSetC1.cpp  mmtkBarrierSetC1.hpp  mmtkBarrierSetC2.cpp  mmtkBarrierSetC2.hpp  mmtkCollectorPolicy.hpp  mmtkCollectorThread.cpp  mmtkCollectorThread.hpp  mmtkContextThread.hpp  mmtkFinalizerThread.cpp  mmtkHeap.cpp  mmtkHeap.hpp  mmtkMutator.cpp  mmtkMutator.hpp  mmtkMutator.inline.hpp  mmtkParallelCleaning.cpp  mmtkParallelCleaning.hpp  mmtkRootsClosure.hpp  mmtkUpcalls.cpp  mmtkVMCompanionThread.cpp  mmtkVMCompanionThread.hpp  mmtkVMOperation.cpp  mmtkVMOperation.hpp  thirdPartyHeapArguments.cpp
openjdk/barriers/: mmtkFieldBarrier.cpp  mmtkFieldBarrier.hpp  mmtkFieldLoggingBarrier.cpp  mmtkFieldLoggingBarrier.hpp  mmtkObjectBarrier.cpp  mmtkObjectBarrier.hpp
